--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>CURUG BADAK</h4>
-                            <p class="text-black-50 mb-0">Curug Badak memiliki ketinggian sekitar 40 meter dengan kondisi arus air yang turun sangat deras.
+                            <h4>CURUG PAYUNG DAN CURUG PENGANTEN</h4>
+                            <p class="text-black-50 mb-0">Curug Panganten memiliki ketinggian sekitar 40 meter dengan kondisi arus air yang turun sangat deras.
                                 Para pengunjung bisa bermain air asalkan bukan di titik tepat jatuhnya air terjun atau curug. Jalur untuk menuju lokasi
-                                Curug Badak sedikit curam dan licin, sehingga para pengunjung harus berhati-hati saat menyusuri jalur tersebut.</p>
+                                Curug Panganten sedikit curam dan licin, sehingga para pengunjung harus berhati-hati saat menyusuri jalur tersebut.</p>
                         </div>
                     </div>
                 </div>
